Started reimplementing everything to use Word query